--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "amazon-transcribe>=0.6.4",
     "av>=15.1.0",
+    "boto3>=1.40.47",
     "librosa>=0.11.0",
     "numpy>=2.3.3",
     "open-clip-torch>=3.2.0",
