updated to arm build and updated dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -41,5 +41,9 @@ node_modules/
 *.md
 *.ini
 
-# server api 
-api-lambda/
+# Serverless Lambda project
+api_lambda/
+
+# Local datasets / media / unused assets
+data/
+workflow.png
