--- a/serverless.yaml
+++ b/serverless.yaml
@@ -399,10 +399,8 @@ resources:
                   Resource: "*"
                 - Effect: Allow
                   Action:
-                    - transcribe:StartTranscriptionJob
-                    - transcribe:GetTranscriptionJob
-                    - transcribe:DeleteTranscriptionJob
-                    - transcribe:ListTranscriptionJobs
+                    - transcribe:StartStreamTranscription
+                    - transcribe:StartStreamTranscriptionWebSocket
                   Resource: "*"
                 - Effect: Allow
                   Action:
