added list of allowed origin and updated _cors_header function

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -40,6 +40,8 @@ provider:
     CDN_DOMAIN: !GetAtt FrontendDistribution.DomainName
     # Frontend origin used by Lambdas for response headers
     FRONTEND_ORIGIN: !Sub https://${FrontendDistribution.DomainName}
+    ALLOWED_ORIGINS: ["http://localhost:5173"]
+
   iamRoleStatements:
     - Effect: Allow
       Action:
