--- a/serverless.yaml
+++ b/serverless.yaml
@@ -12,10 +12,11 @@ provider:
   httpApi:
     cors:
       allowedOrigins:
-        - !Sub https://${FrontendDistribution.DomainName}
-        - http://localhost:3000
-        - http://localhost:5173
-        - http://localhost:8080
+        - '*'
+        # - !Sub https://${FrontendDistribution.DomainName}
+        # - http://localhost:3000
+        # - http://localhost:5173
+        # - http://localhost:8080
       allowedMethods:
         - GET
         - POST
