--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "hls.js": "^1.6.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.9.4",
