--- a/api_lambda/requirements.txt
+++ b/api_lambda/requirements.txt
@@ -1,9 +1,13 @@
 aiomysql==0.2.0
 boto3==1.40.48
 botocore==1.40.48
+certifi==2025.10.5
+charset-normalizer==3.4.4
+idna==3.11
 jmespath==1.0.1
 PyMySQL==1.1.2
 python-dateutil==2.9.0.post0
+requests==2.32.5
 s3transfer==0.14.0
 six==1.17.0
 urllib3==2.5.0
